# AoC2022

./: AoC2022.cabal  CHANGELOG.md  README.md  init-day.sh
app/Day01/: Day0101.hs  Day0102.hs
app/Day02/: Day0201.hs  Day0202.hs
app/Day03/: Day0301.hs  Day0302.hs
app/Day04/: Day0401.hs  Day0402.hs
app/Day05/: Day0501.hs  Day0502.hs
app/Day06/: Day0601.hs  Day0602.hs
app/Day07/: Day0701.hs  Day0702.hs
app/Day08/: Day0801.hs  Day0802.hs
app/Day09/: Day0901.hs  Day0902.hs
app/Day10/: Day1001.hs  Day1002.hs
app/Day11/: Day1101.hs  Day1102.hs
app/Day12/: Day1201.hs  Day1202.hs
app/Day13/: Day1301.hs  Day1302.hs
app/Day14/: Day1401.hs  Day1402.hs
app/Day15/: Day1501.hs  Day1502.hs
app/Day16/: Day1601.hs  Day1602.hs
app/Day17/: Day1701.hs  Day1702.hs
lib/: File.hs  Grid.hs  Helpers.hs
