cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             burzomir
maintainer:         burzomirdev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable AoC2022
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0101
  main-is:          Day01/Day0101.hs
  build-depends:
    , base
    , split
    , ilist
  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0102
  main-is:          Day01/Day0102.hs
  build-depends:
    , base
    , split
    , ilist
  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0201
  main-is:          Day02/Day0201.hs
  build-depends:
    , base
    , split
    , ilist
    , parsec
  hs-source-dirs:   app
  default-language: Haskell2010
