cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             burzomir
maintainer:         burzomirdev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Helpers
  hs-source-dirs:   lib
  build-depends:
    , base
    , parsec

  default-language: Haskell2010

executable Day0101
  main-is:          Day01/Day0101.hs
  build-depends:
    , base
    , ilist
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0102
  main-is:          Day01/Day0102.hs
  build-depends:
    , base
    , ilist
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0201
  main-is:       Day02/Day0201.hs
  build-depends:
    , base
    , ilist
    , parsec
    , split

executable Day0202
  main-is:          Day02/Day0202.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0301
  main-is:          Day03/Day0301.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0302
  main-is:          Day03/Day0302.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0401
  main-is:          Day04/Day0401.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010
