cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             burzomir
maintainer:         burzomirdev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Helpers, Grid, File
  hs-source-dirs:   lib
  build-depends:
    , base
    , parsec
    , vector
    , extra

  default-language: Haskell2010

executable Day0101
  main-is:          Day01/Day0101.hs
  build-depends:
    , base
    , ilist
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0102
  main-is:          Day01/Day0102.hs
  build-depends:
    , base
    , ilist
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0201
  main-is:       Day02/Day0201.hs
  build-depends:
    , base
    , ilist
    , parsec
    , split

executable Day0202
  main-is:          Day02/Day0202.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0301
  main-is:          Day03/Day0301.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0302
  main-is:          Day03/Day0302.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0401
  main-is:          Day04/Day0401.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0402
  main-is:          Day04/Day0402.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0501
  main-is:          Day05/Day0501.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0502
  main-is:          Day05/Day0502.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0601
  main-is:          Day06/Day0601.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0602
  main-is:          Day06/Day0602.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0701
  main-is:          Day07/Day0701.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0702
  main-is:          Day07/Day0702.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0801
  main-is:          Day08/Day0801.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0802
  main-is:          Day08/Day0802.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0901
  main-is:          Day09/Day0901.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day0902
  main-is:          Day09/Day0902.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1001
  main-is:          Day10/Day1001.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1002
  main-is:          Day10/Day1002.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1101
  main-is:          Day11/Day1101.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    

  hs-source-dirs:   app
  default-language: Haskell2010


executable Day1102
  main-is:          Day11/Day1102.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1201
  main-is:          Day12/Day1201.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
    

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1202
  main-is:          Day12/Day1202.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
    

  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1301
  main-is:          Day13/Day1301.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable Day1302
  main-is:          Day13/Day1302.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror


executable Day1401
  main-is:          Day14/Day1401.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable Day1402
  main-is:          Day14/Day1402.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror


executable Day1501
  main-is:          Day15/Day1501.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable Day1502
  main-is:          Day15/Day1502.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror



executable Day1601
  main-is:          Day16/Day1601.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010

executable Day1602
  main-is:          Day16/Day1602.hs
  build-depends:
    , AoC2022
    , base
    , ilist
    , parsec
    , split
    , containers
    , vector
    , transformers
    , search-algorithms
  hs-source-dirs:   app
  default-language: Haskell2010

